--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: sans-serif;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    font-weight: 500;
 }
 h3 {
     margin-top: 0;
